kustomize/overlays/prod/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheck-clusterip
spec:
  type: ClusterIP
  selector:
    app: healthcheck-deployment
    variant: prod
---
apiVersion: v1
kind: Service
metadata:
  name: healthcheckserver-headless
spec:
  type: ClusterIP
  selector:
    app: healthcheckserver-statefulset
    variant: prod
