kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcheck-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: healthcheck.dbca.wa.gov.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthcheck-clusterip-prod
                port:
                  number: 8080
